# vocgo

./: README.md  pyproject.toml
tests/: test_vocgo.py
vocgo/: __init__.py  consts.py  list_stat.py  main.py  merge_labels.py  normalize.py  prepare_data.py  remove_labels.py  rename_labels.py  utilities.py  version.py
